spectec/test/elab/neg/type-undefined-syntax.spectec
;; References a syntax type `nope` that was never declared.

syntax wrapper = wrap nope
